Type-specific map forEach and ObjectInput/Output support for fast byte array streams